[package]
name = "advent-of-rust"
version = "0.1.0"
authors = ["Brian Schubert <brianm.schubert@gmail.com>"]
repository = "https://github.com/blueschu/Advent-Of-Rust"
readme = "readme.md"
license = "MIT"
publish = false
edition = "2018"

[dependencies]
num-traits = "0.1.41"
rust-crypto = "^0.2"
regex = "^0.2"
chrono = "^0.4"
